# Hrdza

./: .gitattributes  .gitignore  README.md
basics/guessing_game/: Cargo.toml
basics/guessing_game/src/: main.rs
basics/hello_world/: Cargo.toml
build_testing/ccrs_test/: Cargo.toml  build.rs  foo.c
build_testing/ccrs_test/src/: main.rs
interestings/brainfucc/: Cargo.toml  echo.bf  mocniny.bf  test.bf
interestings/brainfucc/src/: bf_engine.rs  main.rs  main.rs.txt
neon/hello/: index.js
neon/hello/.cargo/: config
sandbox/neon/hello/: Cargo.toml  index.d.ts  package.json  testing.ts
sandbox/neon/hello/native/: Cargo.toml
sandbox/neon/hello/native/src/: lib.rs
sandbox/tauri00_hello/: package-lock.json  package.json
sandbox/tauri00_hello/src/: index.html  index.js  index.ts
sandbox/tauri00_hello/src-tauri/: Cargo.toml  tauri.conf.json
sandbox/tauri01_webpack/: config-overrides.js  craco.config.js  package-lock.json  package.json
sandbox/tauri01_webpack/config/: webpack.config.js
sandbox/tauri01_webpack/public/: index.html
sandbox/tauri01_webpack/src/: App.js  index.js  tauri.js
sandbox/tauri01_webpack/src-tauri/: tauri.conf.json
sandbox/tauri02_clean/: package-lock.json  package.json
sandbox/webview_rusttest/: package-lock.json  package.json
sandbox/webview_test/: Cargo.toml
tensortut/play_col_result/: Cargo.toml
tensortut/play_enums/: Cargo.toml
tensortut/play_flow/: Cargo.toml
tensortut/play_ground/: Cargo.toml
tensortut/snake/: Cargo.toml  build.rs
tensortut/snake/src/: draw.rs  game.rs  main.rs  snake.rs
(+18 files in other folders)
