[package]
name = "snake"
version = "0.1.0"
build = "build.rs"
authors = ["Plasmoxy <sebohacker@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
piston_window = "0.108.0"

[build-dependencies]
winres = "0.1"