[package]
name = "hello"
version = "0.1.0"
authors = ["Sebastián Petrík <sebohacker@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "hello"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
num_cpus = "1.10.1"